--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cook_pro
+    url: jdbc:mysql://localhost
     username: root
     password:
       initialization-mode: always
